--- a/coffee blog/index.html
+++ b/coffee blog/index.html
@@ -1,52 +1,69 @@
 <!DOCTYPE html>
 <!-- saved from url=(0084)file:///C:/Users/k-pay/OneDrive/Desktop/sandiego%20projects/coffee%20blog/index.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mystyle.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Coffee Blog</h1>
-    </header>
-    <main class="container"> 
-        <h2>
-            Coffee Blog with tips and Courses
-        </h2>
-    <p>Learn from the experts with the best recipes and tips</p>
-    <div>
-        <h2>Our Blog</h2>
-    <img src="img/blog1.jpg" alt="">
-        <h3>Coffee Bean Type</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias deleniti maxime quidem cupiditate perspiciatis necessitatibus tenetur obcaecati quo pariatur, rem natus, odit amet nemo veritatis. Labore quam tenetur provident quis.</p>
-        <a href="#" class="btn-read">read more</a>
-    </div>
-    <div>
-        <img src="img/blog2.jpg" alt="">
-        <h3>3 Delicious Coffee Recipes</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque atque maiores minima excepturi, maxime dignissimos facilis aliquam sapiente mollitia enim ad tempora quae praesentium soluta id! Eligendi tempora consectetur praesentium.</p>
-        <a href="#" class="btn-read">read more</a>
-    </div>
-    <div>
-        <img src="img/blog3.jpg" alt="">
-<h3>Coffee Benefits</h3>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, tempore deleniti ipsum laborum provident quia enim sequi, quo voluptas accusamus, itaque molestiae suscipit inventore necessitatibus doloribus atque vitae in facere!</p>
-<a href="#" class="btn-read">read more</a>
-<div>
-    <h2>Our Courses and Workshops</h2>
-    <h3>Coffee Extraction Techniques</h3>
-    <h4>Price: Free</h4>
-    <h4>Seat: 20</h4>
-    <a href="#" class="btn-more">more information</a>
-</div>
-<div>
-    <h2>4 Coffee Recipes for beginners</h2>
-    <h4>Price: Free</h4>
-    <h4>Seat: 20</h4>
-    <a href="#" class="btn-more">more information</a>
-</div>
-<h2>CoffeeBlog</h2>
-    </div>
-</main>
+    <header class="site-header">
+        <div class="nav-menu-bar">
+            <h1>Coffee Blog</h1>
+            <nav class="menu">
+                <a href="about.html">About</a>
+                <a href="courses.html">Courses</a>
+                <a href="contact.html">contact</a>
+            </nav>
+        </div>
 
-</body></html>
+        <h2>
+        Coffee Blog with tips and Courses
+        </h2>
+        <p>Learn from the experts with the best recipes and tips</p>
+    </header>
+    <main class="main-container container">
+        <div class="our-blog-container">
+            <h2 class="my-blog">Our Blog</h2>
+            <div class="blog-item">
+                <img src="img/blog1.jpg" alt="">
+                <h3>Coffee Bean Type</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias deleniti maxime quidem cupiditate perspiciatis necessitatibus tenetur obcaecati quo pariatur, rem natus, odit amet nemo veritatis. Labore quam tenetur provident quis.</p>
+                <a href="#" class="btn btn-read">read more</a>
+            </div>
+            <div class="blog-item">
+                <img src="img/blog2.jpg" alt="">
+                <h3>3 Delicious Coffee Recipes</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque atque maiores minima excepturi, maxime dignissimos facilis aliquam sapiente mollitia enim ad tempora quae praesentium soluta id! Eligendi tempora consectetur praesentium.</p>
+                <a href="#" class="btn btn-read">read more</a>
+            </div>
+            <div class="blog-item">
+                <img src="img/blog3.jpg" alt="">
+                <h3>Coffee Benefits</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, tempore deleniti ipsum laborum provident quia enim sequi, quo voluptas accusamus, itaque molestiae suscipit inventore necessitatibus doloribus atque vitae in facere!</p>
+                <a href="#" class="btn btn-read">read more</a>
+            </div>
+        
+        </div>
+        
+        <div class="our-courses-container">
+            <h2>Our courses and workshops</h2>
+            <div class="course-item">
+                <h3>Coffee extraction techniques</h3>
+                <p>Price: Free</p>
+                <p>Seat : 20</p>
+                <a href="#" class="btn btn-more">More information</a>
+            </div>
+
+            <div class="course-item">
+                <h3>4 Coffee recipes for begginers</h3>
+                <p>Price: Free</p>
+                <p>Seat: 20</p>
+                <a href="#" class="btn btn-more">More information</a>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
