--- a/coffee blog/contact.html
+++ b/coffee blog/contact.html
@@ -45,5 +45,15 @@
 
         </div>
     </main>
+    <footer class="secondary-header">
+        <div class="nav-menu-bar">
+            <h1>Coffee Blog</h1>
+            <nav class="menu">
+                <a href="about.html">About</a>
+                <a href="courses.html">Courses</a>
+                <a href="contact.html">contact</a>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
